fix whitespace

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -4,6 +4,11 @@
 }
 
 /* stylelint-disable-next-line */
+a {
+  display: inline-block;
+}
+
+/* stylelint-disable-next-line */
 a.active {
   font-weight: bold;
 }
